--- a/src/styles/SolarSystem.css
+++ b/src/styles/SolarSystem.css
@@ -6,12 +6,12 @@
   line-height: 24px;
 }
 
-.xuxublz {
+.layout-container {
   display: flex;
   justify-content: space-between;
 }
 
-.xablau {
+.block {
   align-items: center;
   display: flex;
   height: 180px;
